; ModuleID = '/home/carl/AnghaBench/tmux/compat/extr_imsg-buffer.c_ibuf_free.c'
source_filename = "/home/carl/AnghaBench/tmux/compat/extr_imsg-buffer.c_ibuf_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibuf = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ibuf_free(%struct.ibuf* %0) #0 {
  %2 = alloca %struct.ibuf*, align 8
  store %struct.ibuf* %0, %struct.ibuf** %2, align 8
  %3 = load %struct.ibuf*, %struct.ibuf** %2, align 8
  %4 = icmp eq %struct.ibuf* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %16

6:                                                ; preds = %1
  %7 = load %struct.ibuf*, %struct.ibuf** %2, align 8
  %8 = getelementptr inbounds %struct.ibuf, %struct.ibuf* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.ibuf*, %struct.ibuf** %2, align 8
  %11 = getelementptr inbounds %struct.ibuf, %struct.ibuf* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @freezero(i32 %9, i32 %12)
  %14 = load %struct.ibuf*, %struct.ibuf** %2, align 8
  %15 = call i32 @free(%struct.ibuf* %14)
  br label %16

16:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @freezero(i32, i32) #1

declare dso_local i32 @free(%struct.ibuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
